public/global.css
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}


h1 {
    font-size: 32px;
    line-height: 1.4;
    margin-top: 1.5rem;
}
h2 {
    font-size: 24px;
    line-height: 1.4;
    margin-top: 1.5rem;
}
h3 {
    font-size: 20px;
    line-height: 1.5;
    margin-top: 1.5rem;
}
h4 {
    font-size: 18px;
    line-height: 1.65;
    margin-top: 1.5rem;
}
h5 {
    font-size: 16px;
    line-height: 1.65;
    margin-top: 1.5rem;
}
h6 {
    font-size: 14px;
    line-height: 1.65;
    margin-top: 1.5rem;
}
p {
    margin: 1.5rem 0;
    font-size: 16px;
    line-height: 1.65;
}
@media only screen and (min-width: 30em) {
    p {
        font-size: 18px;
        line-height: 1.65;
    }
}
a {
    text-decoration: none;
    color: #282828;
}
a:visited,
a:hover {
    color: #282828;
}
strong,
b {
    font-weight: 700;
}
em,
i {
    font-style: italic;
}
ul {
    list-style-type: none;
}
li {
    font-size: 16px;
}
@media only screen and (min-width: 30em) {
    li {
        font-size: 18px;
    }
}
img,
video {
    display: block;
    width: 100%;
}
button {
    cursor: pointer;
    border: none;
    outline: none;
    margin: 0;
    padding: 0;
    font-size: 16px;
}
@media only screen and (min-width: 30em) {
    button {
        font-size: 18px;
    }
}
sub,
sup {
    font-size: 0.75rem;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}
sup {
    top: -0.5em;
}
sub {
    bottom: -0.25em;
}


body {
	color: black;
	margin: 0;
	box-sizing: border-box;
	font-weight: 200;
	font-family: 'Raleway';
	font-size: 16px;
}

main {
	padding-top: 4rem;
	padding-left: 5vw;
	padding-right: 5vw;
}

/*
main {
	height: 100%;
	text-align: center;
	margin: 0 auto;
}
*/

